--- a/src/BookStore.App/BookStore.App.csproj
+++ b/src/BookStore.App/BookStore.App.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Components\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BookStore.Domain\BookStore.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
